--- a/editaveis/introducao.tex
+++ b/editaveis/introducao.tex
@@ -75,7 +75,11 @@ Por objetivos específicos para este trabalho, tem-se:
 \begin{itemize}
 	\item \textbf{Capítulo 2 - Referencial Teórico}: apresenta conceitos e abordagens relacionados ao tema deste trabalho, explicitando as informações obtidas a partir da pesquisa bibliográfica e também, a partir da realização da revisão sistemática.
 
-	\item \textbf{Capítulo 3 - Metodologia}: especifica a metodologia adotada para a pesquisa e desenvolvimento deste trabalho, elencando também como a efetividade do \textit{framework} será avaliada e também, quais instituições serão utilizadas como caso durante a aplicação do \textit{framework}.
+	\item \textbf{Capítulo 3 - Metodologia}: especifica a metodologia adotada para a pesquisa e desenvolvimento deste trabalho, elencando como a efetividade do \textit{framework} será avaliada e também, quais instituições serão utilizadas como caso durante a aplicação do \textit{framework}.
 
 	\item \textbf{Capítulo 4 - \textit{Framework} de Avaliação de Código}: apresenta os \textit{checklists} elaborados, correlacionando estes ao detalhamento do \textit{framework} proposto.
+
+	\item \textbf{Capítulo 5 - Materiais e Métodos}: apresenta uma caracterização detalhada dos projetos adotados para uso do \textit{framework} e descrição de todas as ferramentas de trabalho utilizadas para coleta de informações.
+
+	\item \textbf{Capítulo 6 - Aplicação do \textit{Framework}}: apresenta os resultados obtidos a partir da execução dos ciclos de pesquisa-ação bem como uma análise dos dados coletados.
 \end{itemize}
