--- a/editaveis/framework.tex
+++ b/editaveis/framework.tex
@@ -6,7 +6,7 @@ Este capítulo apresenta, inicialmente, o detalhamento das atividades do \textit
 
 Com base em todos os conceitos assimilados a partir da realização da revisão sistemática de literatura e também, da pesquisa bibliográfica, foi possível conceber um grupo de atividades que em sua totalidade compõem o \textit{framework} de avaliação de código.
 
-Iniciando a descrição das atividades pelo macroprocesso, tem-se, conforme ilustrado na figura 3:
+Iniciando a descrição das atividades pelo macroprocesso, tem-se, conforme ilustrado na figura \ref{fig:macroprocesso}:
 
 \begin{itemize}
 	\item \textbf{Elicitar as proposições de valor:} Caracteriza-se como uma reunião entre todos os envolvidos no projeto (área de negócio e área técnica) para alinhamento da missão do projeto. Nesta reunião, a área de negócio irá descrever quais seriam as funcionalidades mais críticas e, portanto, que mais agregam valor em seu contexto, para o \textit{software} a ser construído, de forma que a equipe técnica possa efetuar um planejamento embasado neste aspecto.
@@ -24,20 +24,22 @@ Iniciando a descrição das atividades pelo macroprocesso, tem-se, conforme ilus
 	\item \textbf{Efetuar revisão geral do projeto:} Nesta atividade, haverá uma reunião entre as áreas de negócio e técnica e todas as proposições de valor serão apresentadas de forma breve, explicitando o planejamento e a execução. Caso alguma proposição fique pendente, será avaliada a possibilidade de prorrogação de prazo para término do projeto.
 \end{itemize}
 
-A figura a seguir ilustra o macroprocesso do \textit{framework} proposto.
+A figura \ref{fig:macroprocesso} ilustra o macroprocesso do \textit{framework} proposto.
 
 \begin{figure}[h]
 \includegraphics[width=\textwidth]{figuras/macroprocesso.jpg}
 \caption{Macroprocesso - \textit{Framework de Avaliação de Código}}
+\label{fig:macroprocesso}
 \end{figure}
 
 A partir da descrição das atividades, é possível perceber o quão importante é fazer um bom planejamento e priorização. Caso haja mudanças no escopo e também nos prazos, a princípio, as funcionalidades que mais agregam valor já terão sido cobertas pelos instrumentos de garantia de qualidade.
 
-Quanto à descrição das atividades constituintes do subprocesso Executar Sprint, tem-se, conforme ilustrado pela Figura 4:
+Quanto à descrição das atividades constituintes do subprocesso Executar Sprint, tem-se, conforme ilustrado pela figura \ref{fig:subprocesso}:
 
 \begin{figure}[h]
 \includegraphics[width=\textwidth]{figuras/executarsprint.jpg}
 \caption{Subprocesso - \textit{Executar Sprint}}
+\label{fig:subprocesso}
 \end{figure}
 
 \begin{itemize}
