--- a/editaveis/metodologia.tex
+++ b/editaveis/metodologia.tex
@@ -46,11 +46,12 @@ A fase de \textit{Coleta de Informações} compreende a aplicação dos procedim
 
 Por fim, na fase \textit{Proposta de Solução}, há a concepção de uma possível solução para a problemática identificada. Esta solução, por sua vez, está embasada nas informações coletadas na fase anterior.
 
-A figura a seguir ilustra essa parte do plano metodológico.
+A figura \ref{fig:plano1} ilustra essa parte do plano metodológico.
 
 \begin{figure}[h]
 \includegraphics[width=\textwidth]{figuras/planometodologico1.png}
 \caption{Plano Metodológico - TCC 1}
+\label{fig:plano1}
 \end{figure}
 
 A segunda parte, já vinculada ao TCC 2, envolve outras 3 fases: \textit{Coleta de Dados}; \textit{Análise e Interpretação dos Resultados} e \textit{Divulgação dos Resultados}, conforme ilustrado na Figura 2.
@@ -58,11 +59,12 @@ A fase \textit{Coleta de Dados} envolve a aplicação de um procedimento técnic
 
 Na fase \textit{Análise e Interpretação dos Resultados}, todos os dados coletados a partir da utilização do \textit{framework} serão analisados, de forma que todas as percepções possíveis possam ser obtidas. Por fim, na fase \textit{Divulgação dos Resultados}, haverá uma estruturação de todos os dados obtidos e analisados, de forma que possa ser evidenciado a efetividade do uso do \textit{framework}.
 
-A figura a seguir ilustra a segunda parte do plano metodológico.
+A figura \ref{fig:plano2} ilustra a segunda parte do plano metodológico.
 
 \begin{figure}[h]
 \includegraphics[width=\textwidth]{figuras/planometodologico2.png}
 \caption{Plano Metodológico - TCC 2}
+\label{fig:plano2}
 \end{figure}
 
 \section{Elaboração da Proposta do \textit{Framework}}
@@ -87,7 +89,7 @@ Interna à CGDF há uma coordenação, a COTEC (Coordenação de Administração
 
 A equipe da COTEC é pequena, contando com um total de 10 servidores. São 3 servidores na frente de infraestrutura, 3 na frente de administração de banco de dados e apenas 4 na área de desenvolvimento. O \textit{Scrum} e XP foram adotados recentemente na COTEC.
 
-A maior parte dos sistemas desenvolvidos e mantidos pela COTEC são aplicações \textit{Web}, construídas com as linguagens de programação \textit{CSharp} e Java. Adicionalmente, faz-se uso do \textit{framework} \textit{AngularJS} para elaboração da camada de apresentação das aplicações.
+A maior parte dos sistemas desenvolvidos e mantidos pela COTEC são aplicações \textit{Web}, construídas com as linguagens de programação \textit{CSharp}, Java e \textit{Ruby} com auxílio do \textit{framework} \textit{Rails}. Adicionalmente, faz-se uso do \textit{framework} \textit{AngularJS} para elaboração da camada de apresentação das aplicações.
 
 Embora já se tenha o mínimo de atividades para controlar o desenvolvimento, a COTEC ainda necessita incorporar uma série de outras práticas. As atividades inerentes à verificação de \textit{software} ainda são incipientes na COTEC, tornando-a um local propício para a aplicação do \textit{framework}.
 
@@ -103,7 +105,7 @@ Por se tratar de uma instituição aberta ao âmbito de pesquisa na área de Eng
 
 \section{Avaliação da Efetividade do \textit{Framework}}
 
-Para realizar futuramente uma análise da efetividade da aplicação do \textit{framework}, elaborou-se um GQM (\textit{Goal Question Metrics}) \cite{gqm}. A seguir, tem-se uma tabela que resume o objetivo da medição.
+Para realizar futuramente uma análise da efetividade da aplicação do \textit{framework}, elaborou-se um GQM (\textit{Goal Question Metrics}) \cite{gqm}. A seguir, tem-se a tabela \ref{table:tabela1}, que resume o objetivo da medição.
 
 \begin{table}[h]
 \centering
@@ -120,7 +122,8 @@ Sob o ponto de vista de & \textit{Stakeholders} do projeto \\
 No contexto de & Aumento da qualidade do \textit{software} \\ 
 \hline
 \end{tabular}
-\caption{Tabela Resumo do Objetivo de Medição}\label{table:1}
+\caption{Tabela Resumo do Objetivo de Medição}
+\label{table:tabela1}
 \end{table}
 
 A partir do quadro resumo que descreve o objetivo de medição, foram elaboradas questões a serem respondidas por meio das medições, bem como as métricas associadas às mesmas. A seguir, tem-se a apresentação das questões e métricas.
@@ -139,7 +142,7 @@ A partir do quadro resumo que descreve o objetivo de medição, foram elaboradas
 	\subitem Índice de Satisfação
 
 	\item \textbf{Questão 5:} Qual o grau de facilidade percebido quando vai ser feita uma manutenção no código?
-	\subitem Índice de Manutenibilidade
+	\subitem Índice de Manutenibilidade (Para Java e \textit{CSharp}) e Flog (para \textit{Ruby})
 \end{itemize}
 
 A coleta de métricas será realizada ao final de cada \textit{sprint}, de maneira a avaliar os resultados e verificar a efetividade do \textit{framework}. Caso ajustes sejam necessários, as modificações serão feitas e novamente, todo o ciclo de atividades será executado na \textit{sprint} seguinte.
@@ -178,15 +181,28 @@ Será feito o cômputo das respostas atribuídas pelos desenvolvedores aos itens
 
 Com relação às métricas adotadas por meio da aplicação do GQM, citadas anteriormente, esta seção traz detalhes acerca do Índice de Manutenibilidade.
 
-O Índice de Manutenibilidade indica um valor entre 0 e 100 e representa a facilidade em manter o código de um determinado módulo. Um valor alto expressa melhor manutenibilidade. De acordo com a \textit{Microsoft}, valores entre 20 e 100 expressam boa manutenibilidade. Valores entre 10 e 19 indicam manutenibilidade moderada e, por fim, valores entre 0 e 9 indicam pouca manutenibilidade.
+O Índice de Manutenibilidade indica um valor entre 0 e 100 e representa a facilidade em manter o código de um determinado módulo. Um valor alto expressa melhor manutenibilidade. De acordo com o portal de métricas de código fonte da \textit{Microsoft}, disponível em (https://msdn.microsoft.com/pt-br/library/bb385914.aspx), valores entre 20 e 100 expressam boa manutenibilidade. Valores entre 10 e 19 indicam manutenibilidade moderada e, por fim, valores entre 0 e 9 indicam pouca manutenibilidade.
 
-A figura a seguir expressa a fórmula utilizada para calcular o Índice de Manutenibilidade.
+A figura \ref{fig:formulaManutenibilidade} expressa a fórmula utilizada para calcular o Índice de Manutenibilidade, que foi concebida por Paul Oman e Jack Hagemeister e apresentada pela primeira vez em 1992 na ICSM (\textit{International Conference on Software Maintenance}).
 
 \begin{figure}[h]
 \includegraphics[width=\textwidth]{figuras/mi.png}
 \caption{Fórmula para o cálculo do Índice de Manutenibilidade}
+\label{fig:formulaManutenibilidade}
 \end{figure}
 
 A fórmula considera o Volume de Halstead, que indica a facilidade de entender o código, considerando todos os operadores e operandos, a complexidade ciclomática, que expressa a quantidade de fluxos diferentes que podem ser obtidos, a quantidade de linhas de código e o percentual de linhas de comentário.
+
+Com relação aos projetos em \textit{Ruby}, foi necessário selecionar uma métrica mais apropriada para avaliar a manutenibilidade do código (Flog), pois o recurso de metaprogramação, fortemente presente em código \textit{Ruby}, acrescenta particularidades para a análise de manutenibilidade.
+
+A métrica Flog expressa uma pontuação que é fornecida ao código com base em três quesitos:
+
+\begin{itemize}
+	\item Atribuições: quanto mais atribuições são feitas, maior é a pontuação obtida.
+	\item Ramos (\textit{Branches}): quando o código se ramifica, existem vários caminhos que podem ser seguidos. Esse aspecto aumenta a complexidade do código.
+	\item Chamadas: a quantidade de chamadas efetuadas internamente entre os módulos afeta a complexidade do código, visto que existem muitas interfaces e passagens de parâmetros.
+\end{itemize}
+
+Para cada um dos quesitos citados acima há uma pontuação diferente associada. Por exemplo, uma chamada de método padrão recebe pontuação igual a 2, mas uma chamada \textit{eval} já recebe pontuação igual a 5, mesmo que ambos sejam chamadas. Quanto mais complexo for o entendimento do código, mais alta será a pontuação. Há um site que contem a lista de pontuações categorizada para a métrica disponível em (http://docs.seattlerb.org/flog/). Com relação ao nível de aceitação proposto pelos idealizadores da métrica, um método com boa aceitação possui pontuação total inferior à 40.
 
 Por fim, com relação ao índice de satisfação dos desenvolvedores, nenhuma fórmula específica foi desenvolvida. Será considerado o percentual das alternativas da Escala \textit{Likert} obtido para cada questão do questionário.
