--- a/editaveis/metodologia.tex
+++ b/editaveis/metodologia.tex
@@ -69,7 +69,7 @@ A figura \ref{fig:plano2} ilustra a segunda parte do plano metodológico.
 
 \section{Elaboração da Proposta do \textit{Framework}}
 
-A primeira parte do plano metodológico já foi executada durante a realização deste trabalho. Com base no problema identificado e nas informações levantadas por meio da pesquisa bibliográfica e da revisão sistemática, foi possível conceber o \textit{framework} de avaliação da qualidade de código. Adicionalmente, já foi definido como a avaliação do \textit{framework} será feita. As próximas seções descrevem detalhadamente este quesito que, por sua vez, constitui a segunda parte do plano metodológico, a ser executado no TCC 2.
+A primeira parte do plano metodológico já foi executada durante a realização do TCC 1. Com base no problema identificado e nas informações levantadas por meio da pesquisa bibliográfica e da revisão sistemática, foi possível conceber o \textit{framework} de avaliação da qualidade de código. Adicionalmente, já foi definido como a avaliação do \textit{framework} seria feita. As próximas seções descrevem detalhadamente este quesito que, por sua vez, constitui a segunda parte do plano metodológico, executado durante este trabalho (TCC 2).
 
 \section{Estratégia de Aplicação do \textit{Framework}}
 
